--- a/Day3/myapp/src/Assets/Css/home.css
+++ b/Day3/myapp/src/Assets/Css/home.css
@@ -4,7 +4,7 @@
     height:30rem;
     border-bottom: 0.5rem solid rgb(252, 123, 31);
 }
-.quote-container {
+.quote-container p{
     position: absolute;
     top: 50%;
     left: 40%;
@@ -16,4 +16,16 @@
     text-decoration:solid;
     color: black;
     font-size:1.5rem;
+}
+.quote-container h2{
+    position: absolute;
+    padding-top: 35rem;
+    padding-left: 17rem;
+    color: white;
+    font-family:cursive;
+    text-shadow: 2px;
+    text-decoration:solid;
+    color: black;
+    font-size:1.5em;
+    
 }
