--- a/Day3/myapp/src/Assets/Css/footer.css
+++ b/Day3/myapp/src/Assets/Css/footer.css
@@ -6,7 +6,8 @@
   color: #fff;
   font-size: 0.875rem;
   font-weight: 600;
-  height: 60px;
+  height: 50px;
+  margin-top: 2rem;
 }
 
 .footer-items {
