--- a/Day3/myapp/src/Assets/Css/home.css
+++ b/Day3/myapp/src/Assets/Css/home.css
@@ -29,3 +29,26 @@
     font-size:1.5em;
     
 }
+.quote-container .register-button {
+    margin-top: 1rem;
+    top: 90%;
+    left: 47%;
+    position: absolute;
+    background-color: #f07f1d;
+    font-family: cursive;
+    color: rgb(8, 8, 8);
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 5px;
+    border-radius: 40px;
+    transition: transform 0.4s; 
+    font-size: 18px;
+    margin-right: 1px;
+}
+
+.register-button:hover {
+    transform: scale(1.2);
+    color: rgb(253, 247, 245);
+}
+
