--- a/Day3/myapp/src/Assets/Css/nav.css
+++ b/Day3/myapp/src/Assets/Css/nav.css
@@ -7,10 +7,10 @@
 
 
 .navbar {
-    padding: 6px;
-    background: #c21500;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #ffc500, #c21500);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #ffc500, #c21500); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    padding: 3px;
+    background: #c21500;  
+    background: -webkit-linear-gradient(to right, #ffc500, #c21500);  
+    background: linear-gradient(to right, #ffc500, #c21500);
     display: flex;
     justify-content: space-between; /* Adjusted to spread items evenly */
     align-items: center; /* Vertically center items */
@@ -47,21 +47,22 @@
 .logo{
     width:70px;
     height:39px;
-    margin-left: 12.3rem;
-    margin-top: 9px;
+     margin-right: 36rem;
+     margin-top: 3px;
+    position: relative;
 }
 .btn{
-    background-color:#fefdfe;
+    background-color:#f07f1d;
     font-family: cursive;
     color:rgb(8, 8, 8);
     text-decoration:none;
     border:2px solid transparent;
     font-weight:bold;
-     padding:5px;
-    border-radius:40px;
+     
+    border-radius:90px;
     transition:transform .4s;
     font-size: 18px;
-    margin-right: 1px;
+    
 }
 .btn:hover{
     transform: scale(1.2);
