--- a/Day3/myapp/src/Assets/Css/style.css
+++ b/Day3/myapp/src/Assets/Css/style.css
@@ -3,7 +3,10 @@ body{
     background-color: rgb(234, 234, 221);
     height:100vh;
     width:100vw;
-    margin:0px;
+    margin:0;
     overflow-x: hidden;
     overflow-y: auto;
-}
+
+       
+    }
+
