--- a/Day3/myapp/src/Assets/Css/login.css
+++ b/Day3/myapp/src/Assets/Css/login.css
@@ -3,10 +3,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh;
-    background-image: url("https://t3.ftcdn.net/jpg/02/82/28/10/360_F_282281016_H1uPO6dYx5AsYLTHW5fRyDhSI2xnaYPh.jpg");
+    height: 100vh;
+    background-image: url("https://img.freepik.com/premium-photo/dog-portrait-studio-with-black-background-generated-by-artificial-intelligence_384104-294.jpg");
      background-repeat: no-repeat;
      background-size:cover ;
+     /* width:20px; */
     overflow: hidden;
     position: relative;
 } 
