--- a/Day3/myapp/src/Assets/Css/login.css
+++ b/Day3/myapp/src/Assets/Css/login.css
@@ -40,6 +40,12 @@
     font-family: cursive;
     
 }
+.register h1{
+    padding-top: 2px;
+    margin-bottom: 25px;
+    font-family: cursive;
+    
+}
 .auth-input {
     background-color: #f5f5f7;
     width: 80%;
