--- a/CC1/myapp/src/Assets/Css/register.css
+++ b/CC1/myapp/src/Assets/Css/register.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height:auto;
+    height:33rem;
     background-image: url("https://img.freepik.com/premium-photo/dog-portrait-studio-with-black-background-generated-by-artificial-intelligence_384104-294.jpg");
      background-repeat: no-repeat;
      background-size:cover ;
