--- a/CC1/myapp/src/Assets/Css/nav.css
+++ b/CC1/myapp/src/Assets/Css/nav.css
@@ -7,13 +7,14 @@
 
 
 .navbar {
-    padding: 3px;
+    padding: 1.5px;
     background: #c21500;  
     background: -webkit-linear-gradient(to right, #ffc500, #c21500);  
     background: linear-gradient(to right, #ffc500, #c21500);
     display: flex;
     justify-content: space-between; /* Adjusted to spread items evenly */
     align-items: center; /* Vertically center items */
+    justify-content: end;
 }
 
 
@@ -22,10 +23,12 @@
     display: flex;
     margin: 0;
     padding: 0;
+    justify-content: end;
+    padding-right: 20px;
 }
 
 
-.navbar a {
+.navbar li{
     text-decoration: none;
     color: black;
     font-weight: bold;
@@ -47,7 +50,7 @@
 .logo{
     width:70px;
     height:39px;
-     margin-right: 36rem;
+     margin-right: 43rem;
      margin-top: 3px;
     position: relative;
 }
@@ -68,4 +71,11 @@
     transform: scale(1.2);
     
     color: rgb(238, 66, 18);
+  }
+  .nav{
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
+    font-family: cursive;
   }
