--- a/CC1/myapp/src/Assets/Css/overlap.css
+++ b/CC1/myapp/src/Assets/Css/overlap.css
@@ -1,118 +1,140 @@
 .flip {
-    position: relative;
-    display: inline-block;
-    
-    margin-bottom: 2em;
-    width: 165px;
-    margin-left:6rem;
-    margin-top:2rem;
+  position: relative;
+  display: inline-block;
+  
+  margin-bottom: 2em;
+  width: 165px;
+  margin-left:6rem;
+  margin-top:2rem;
 
-    
-    > .front,
-    > .back {
-        display: block;
-        color: rgb(16, 16, 16);
-        width: inherit;
-        background-size: cover !important;
-        background-position: center !important;
-        height: 300px;
-        padding: 1em 2em;
-        background: #f06f25;
-        border-radius: 10px;
-        position: relative;
-        transition-timing-function: cubic-bezier(.175, .885, .32, 1.275);
-        transition-duration: .5s;
-        transition-property: transform, opacity;
-    }
+  
+  > .front,
+  > .back {
+      display: block;
+      color: rgb(16, 16, 16);
+      width: inherit;
+      background-size: cover !important;
+      background-position: center !important;
+      height: 300px;
+      padding: 1em 2em;
+      background: #f06f25;
+      border-radius: 10px;
+      position: relative;
+      transition-timing-function: cubic-bezier(.175, .885, .32, 1.275);
+      transition-duration: .5s;
+      transition-property: transform, opacity;
+  }
 
-    > .front {
-        transform: rotateY(0deg);
-        border: 2px solid #000;
-    }
-    
-    > .back {
-        position: absolute;
-        opacity: 0;
-        top: 0px;
-        left: 0px;
-        width: 100%;
-        height: 100%;
-        transform: rotateY(-180deg);
-        border: 2px solid #000;
-        margin-right:20rem;
-    }
-    
-    &:hover {
-        > .front {
-            transform: rotateY(180deg);
-        }
-        > .back {
-            opacity: 1;
-            transform: rotateY(0deg);
-        }
-    }
-    
-    &.flip-vertical {
-        > .back {
-            transform: rotateX(-180deg);
-        }
-        
-        &:hover {
-            > .front {
-                transform: rotateX(180deg);
-            }
-            > .back {
-                transform: rotateX(0deg);
-            }
-        }
-    }
-    
-    img.lap {
-        /* max-width: 100%; */
-        height: 10rem;
-        width:10rem;
-        display: block;
-        border-radius: 10px 10px 0 0;
-        align-items: center;
-        justify-content: center;
-        /* margin-left: 3rem; */
-        border-radius: 5px;
-        position: relative;
-        
-        border: 2px solid #000;
-    }
+  > .front {
+      transform: rotateY(0deg);
+      border: 2px solid #000;
+  }
+  
+  > .back {
+      position: absolute;
+      opacity: 0;
+      top: 0px;
+      left: 0px;
+      width: 100%;
+      height: 100%;
+      transform: rotateY(-180deg);
+      border: 2px solid #000;
+      margin-right:20rem;
+  }
+  
+  &:hover {
+      > .front {
+          transform: rotateY(180deg);
+      }
+      > .back {
+          opacity: 1;
+          transform: rotateY(0deg);
+      }
+  }
+  
+  &.flip-vertical {
+      > .back {
+          transform: rotateX(-180deg);
+      }
+      
+      &:hover {
+          > .front {
+              transform: rotateX(180deg);
+          }
+          > .back {
+              transform: rotateX(0deg);
+          }
+      }
+  }
+  
+  img.lap {
+      /* max-width: 100%; */
+      height: 10rem;
+      width:10rem;
+      display: block;
+      border-radius: 10px 10px 0 0;
+      align-items: center;
+      justify-content: center;
+      /* margin-left: 3rem; */
+      border-radius: 5px;
+      position: relative;
+      
+      border: 2px solid #000;
+  }
 
-    h1.text-shadow {
-        font-size: 1.5rem;
-        font-weight: 700;
-    
-        margin-top: 1.5rem;
-        margin-left:3rem;
-    }
+  h1.text-shadow {
+      font-size: 1.5rem;
+      font-weight: 700;
+  
+      margin-top: 1.5rem;
+      margin-left:3rem;
+  }
 
-    p {
-        font-size: 1.5rem;
-        line-height: 160%;
-        font-weight: 400;
-        color: #0c0c0c;
-    }
-    .back h2{
-        padding-top:15px;
-    }
-    .back p{
-        padding-top:15px;
-    }
+  p {
+      font-size: 1.5rem;
+      line-height: 160%;
+      font-weight: 400;
+      color: #0c0c0c;
+  }
+  .back h2{
+      padding-top:15px;
+  }
+  .back p{
+      padding-top:15px;
+  }
 }
 .change h2{
-     padding-top: 50px;
-     padding-left:35rem;
-     font-family: cursive;
-     font-size: 30px;
+   padding-top: 50px;
+   padding-left:35rem;
+   font-family: cursive;
+   font-size: 30px;
 }
 .move{
-    margin-left: 17rem;
+  margin-left: 17rem;
 }
 .front p{
-    color:rgb(5, 3, 0);
-    padding-left:10px;
+  color:rgb(5, 3, 0);
+  padding-left:10px;
 }
+/* .swiper {
+  overflow: hidden;
+  width: 100%;
+}
+
+.swiper-wrapper {
+  display: flex;
+  animation: carousel 15s linear infinite;
+}
+
+.swiper-slide {
+  flex: 0 0 33.33%; 
+}
+
+@keyframes carousel {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-300%); 
+  }
+} */
