--- a/CC1/myapp/src/Assets/Css/footer.css
+++ b/CC1/myapp/src/Assets/Css/footer.css
@@ -19,9 +19,9 @@
   background: #c21500;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #ffc500, #c21500);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #ffc500, #c21500);
-  margin-left: 6rem;
+  /* margin-left: 6rem; */
   color:#ddd;
-  padding-left:30px;
+  /* padding-left:30px; */
 }
 
 .footer-items h3 {
@@ -46,7 +46,7 @@
 }
 
 .footer {
-  position: fixed;
+  /* position: fixed; */
   bottom: 0;
   left: 0;
   width: 100%;
