--- a/CC1/myapp/src/Assets/Css/footer.css
+++ b/CC1/myapp/src/Assets/Css/footer.css
@@ -9,6 +9,7 @@
   height: 50px;
   margin-top: 2rem;
   margin-left: 10rem;
+  font-style: cursive;
 }
 
 .footer-items {
@@ -16,15 +17,14 @@
   justify-content: space-evenly;
   width: 100%;
   margin: 0 auto;
-  background: #c21500;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #ffc500, #c21500);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #ffc500, #c21500);
-  /* margin-left: 6rem; */
+  font-style: cursive;
+   background-color: rgb(78, 52, 17);
   color:#ddd;
   /* padding-left:30px; */
 }
 
 .footer-items h3 {
+  font-style: cursive;
   font-size: 1rem;
   font-weight: 500;
   color: #fff;
@@ -32,17 +32,20 @@
 }
 
 .footer-items ul {
+  font-style: cursive;
   list-style: none;
   margin-bottom: 20px;
 }
 
 .footer-items li a {
+  font-style: cursive;
   color: #ddd;
   font-size: 0.875rem;
 }
 
 .footer-items li a:hover {
   text-decoration: underline;
+  font-style: cursive;
 }
 
 .footer {
@@ -58,4 +61,29 @@
   padding: 10px;
   overflow-x: hidden;
   text-align: center;
+  font-style: cursive;
+}
+
+.social-icons {
+  text-align: center;
+  padding: 5px;
+  font-style: cursive;
+  color: #fff;
+}
+
+.social-icons h6 {
+  margin-bottom: 20px;
+  font-style: cursive;
+}
+
+.icon-container {
+  display: flex;
+  justify-content: center;
+  font-style: cursive;
+}
+
+.icon {
+  margin: 0 10px;
+  font-style: cursive;
+  color: #fff;
 }
