--- a/CC1/myapp/src/Assets/Css1/opet.css
+++ b/CC1/myapp/src/Assets/Css1/opet.css
@@ -1,7 +1,7 @@
 
     
   
-    .ccard {
+    .ocard {
         width: 280px;
         height: 400px;
         float: left;
@@ -35,26 +35,26 @@
           font-weight: 300;
         }
     
-        .catbtn {
+        .obtn {
          
               border-radius:5px;
               width:60%;
               padding:0.7rem;
               border:none;
-              background-color:rgb(82, 43, 22);
+               background-color:rgb(82, 43, 22);
               color:white;
               margin: 12%;
               font-family: cursive;
           
         }
-        .catbtn:hover{
+        .obtn:hover{
           background-color: beige;
         }
       }
    
     
   
-  .cgcont{
+  .ogcont{
       /* background-color: brown; */
       height:70vh;
       width:80vw;
@@ -62,7 +62,7 @@
       margin-top: 3%;
       /* margin-top: 10%; */
   }
-  .cgcont2{
+  .ogcont2{
       /* background-color: brown; */
       height:70vh;
       width:80vw;
@@ -71,7 +71,7 @@
       /* margin:9%; */
       /* top: 10%; */
   }
-  .cgcont3{
+  .ogcont3{
       /* background-color: brown; */
       height:70vh;
       width:80vw;
@@ -80,7 +80,7 @@
       /* margin:9%; */
       /* top: 10%; */
   }
-  .cgcont4{
+  .ogcont4{
       /* background-color: brown; */
       height:70vh;
       width:80vw;
@@ -89,14 +89,14 @@
       /* margin:9%; */
       /* top: 10%; */
   }
-  .chead{
+  .ohead{
       /* background:pink; */
       height: 20vh;
       width:30vw;
-      margin-left: 11%;
+      margin-left: 17%;
       text-align: center;
   }
-  .chead svg{
+  .ohead svg{
     fill:brown;
   }
   .footy{
@@ -105,7 +105,7 @@
       width:99vw;
       margin-top: 3%;
   }
-  .chead h1{
+  .ohead h1{
       font-family: cursive;
       font-size: 5.5rem;
   }
