--- a/CC1/myapp/src/Assets/Css/login.css
+++ b/CC1/myapp/src/Assets/Css/login.css
@@ -64,6 +64,7 @@
     background-color: rgb(79, 47, 26);
     color: white;
     font-family: cursive;
+    cursor: pointer;
 }
 
 .auth-input:focus {
