--- a/CC1/myapp/src/Assets/Css1/cpet.css
+++ b/CC1/myapp/src/Assets/Css1/cpet.css
@@ -45,10 +45,11 @@
               color:white;
               margin: 12%;
               font-family: cursive;
+              cursor: pointer;
           
         }
         .catbtn:hover{
-          background-color: beige;
+          background-color: rgb(79, 22, 22);
         }
       }
    
