--- a/CC1/myapp/src/Assets/Css1/dash.css
+++ b/CC1/myapp/src/Assets/Css1/dash.css
@@ -70,6 +70,7 @@ nav > ul > li > a {
   transition: all 0.1s linear;
   -webkit-transition: all 0.1s linear;
   padding: 10px 0;
+  cursor: pointer;
 }
 
 .nav-icon {
