--- a/CC1/myapp/src/Assets/Css1/dpet.css
+++ b/CC1/myapp/src/Assets/Css1/dpet.css
@@ -45,6 +45,7 @@
             color:white;
             margin: 12%;
             font-family: cursive;
+            cursor: pointer;
         
         
       }
