--- a/Musicapp/musicplayer/src/assets/css/layout.css
+++ b/Musicapp/musicplayer/src/assets/css/layout.css
@@ -1,44 +1,160 @@
-.body{
-    background-color: rgb(53, 53, 52);
-    height:100vh;
-    width:100vw;
-}
+
 .navs{
     background-color:  rgb(96, 94, 96);
-    height:90vh;
+    height:92vh;
     width:15vw;
     
 }
 .navt{
-    background-color:  rgb(53, 53, 52);
-    height:10vh;
+    background-color:  rgb(96, 94, 96);
+    height:8vh;
     width:100vw;
 }
 .home{
-     background-color:   rgb(96, 94, 96);
+     /* background-color:   rgb(143, 53, 143); */
     
     height:20vh;
     width:15vw;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    border-radius: 10px;
 }
 .navdiv{
-    background-color:  rgb(53, 53, 52);
-    height:10vh;
-    width:15vw;
+    background-color: rgb(89, 83, 89);
+    height:8vh;
+    width:14.8vw;
     margin-bottom: 10px;
     border-radius: 10px;
     display: flex;
     flex-direction: row;
+    
 }
 .img{
     background-color: aqua;
-    height:10vh;
-    width:5vw;
-    border-radius: 25px;
+    height:8vh;
+    width:4vw;
+    border-radius: 15px;
 }
 .name{
-    background-color: brown;
+    /* background-color: rgb(53, 53, 52); */
+    height:8vh;
+    width:10vw;
+    border-radius: 10px;
+    padding: 8px;
+    margin-left: 8px;
+    color:white;
+    font-size: 20px;
+}
+.body{
+    display: flex;
+    flex-direction: row;
+}
+.home_l{
+    height:8vh;
+    width:14.8vw;
+    /* background-color: rgb(89, 83, 89) ; */
+    /* background-color: blanchedalmond; */
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    color: white;
+}
+.home_l h1{
+    display: flex;
+    flex-direction: row;
+    font-size: 19px;
+    font-weight: 500rem;
+    margin-left: 40px;
+}
+.home_l:hover{
+    background-color: rgb(53, 53, 52);
+}
+.navdiv:hover{
+    background-color: rgb(53, 53, 52);
+}
+span{
+    padding-left: 8px;
+}
+.navt h1{
+ 
+    display: flex;
+    flex-direction: row;
+    color: white;
+    font-size: 30px;
+    padding-left: 30px;
+    font-family: cursive;
+}
+
+svg{
+    color:white;
+  
+}
+
+.navt:hover{
+    background-color: rgb(53, 53, 52) ;
+}
+.song{
+    background-color: white;
+    height:92vh;
+    width:85vw;
+}
+.melody{
+    height: 55vh;
+    width:55vw;
+    margin-top: 3%;
+    margin-left: 17%;
+    border-radius: 2px;
+    box-shadow:
+  3.4px 3.4px 2.7px rgba(0, 0, 0, 0.056),
+  8.7px 8.7px 6.9px rgba(0, 0, 0, 0.08),
+  17.7px 17.7px 14.2px rgba(0, 0, 0, 0.1),
+  36.5px 36.5px 29.2px rgba(0, 0, 0, 0.124),
+  100px 100px 80px rgba(0, 0, 0, 0.18)
+;
+}
+.bar{
+    height:10vh;
+    width:55vw;
+    background-color: rgb(96, 94, 96);
+    margin-top: 4%;
+    margin-left: 17%;
+    display: flex;
+    flex-direction: row;
+    gap:12rem;
+    border-radius: 20px;
+}
+.for{
     height:10vh;
     width:10vw;
-
+    background-color: rgb(89, 83, 89);
+    align-items: center;
+    padding-left: 40px;
+    padding-top: 15px;
+    border-radius: 30px;
+}
+.play{
+    height:10vh;
+    width:10vw;
+    background-color: rgb(89, 83, 89);
+    align-items: center;
+    padding-left: 40px;
+    padding-top: 15px;
+    border-radius: 30px;
+}
+.to{
+    height:10vh;
+    width:10vw;
+    background-color: rgb(89, 83, 89);
+    align-items: center;
+    padding-left: 40px;
+    padding-top: 15px;
+    border-radius: 30px;
+}
+.for:hover{
+background-color:rgb(53, 53, 52) ;
+}
+.play:hover{
+background-color:rgb(53, 53, 52) ;
+}
+.to:hover{
+background-color:rgb(53, 53, 52) ;
 }
